<resources>
    <string name="app_name">Libra</string>
    <!-- Landing page e fragment relativi -->
    <string name="landingPageTopLogo">Logo application</string>
    <string name="loginLabel">Already have an account</string>
    <string name="loginButton">LOGIN</string>
    <string name="registrationLabel">I want to create an account</string>
    <string name="registrationButton">SIGN UP</string>
    <string name="loginDescription">Fill-in with your Libra credentials to login</string>
    <string name="signinDescription">Fill-in with your personal data to sign-in</string>
    <string name="emailLabel">e-mail</string>
    <string name="emailTip">john.doe@acme.com</string>
    <string name="passwordLabel">Password</string>
    <string name="passwordTip">3 chars at least</string>
    <string name="signinRoleLabel">Select role</string>
    <string name="signinRadioButtonLabelPaz">Patient</string>
    <string name="signinRadioButtonLabelNut">Nutritionist</string>
    <string name="signinNameLabel">Name</string>
    <string name="signinSurnameLabel">Surname</string>
    <string name="signinNameTip">John</string>
    <string name="signinSurnameTip">Doe</string>
    <string name="signinBirthdayLabel">Day of Birth</string>
    <string name="signinBirthdayNotice">Check Day of birth field</string>
    <string name="signinUserRoleBasedLabelPaz">ID of  my personal nutritionist</string>
    <string name="signinUserRoleBasedFieldPazTip">AA_123456</string>
    <string name="signinUserRoleBasedLabelNut">My Professional ID Register of Nutritionists</string>
    <string name="signinUserRoleBasedFieldNutTip">AA_123456</string>
    <string name="signinPasswordConfirmLabel">Confirm password</string>
    <string name="signinPasswordConfirmFieldTip">Retype password</string>
    <string name="signinPasswordNotice">Password match</string>
    <string name="signinButton">Signin</string>
    <string name="loginErrorMsg">Wrong credential</string>
    <string name="signinErrorCode409">e-mail already exists.\n Try login or use another e-mail</string>
    <string name="signinErrorCode490">Professional ID already used.\n Check ID for typo</string>
    <string name="signinErrorCode491">Nutritionist ID not exists.\n Check ID for typo</string>
    <string name="signinErrorMsg">Generic error.\n Try login later</string>
    <string name="quitMessage">A network error occurred.\nPlease check your internet connection before use Libra.\nBackend server lost</string>
    <string name="quitButton">QUIT</string>
    <string name="rememberMeCheckBox">Remember me for future login</string>


    <!-- Menu utente -->
    <string name="menu_profile_label">Profile</string>
    <string name="menu_diet_label">Diet</string>
    <string name="menu_libra_label">Libra</string>
    <string name="menu_history_label">History</string>
    <string name="menu_chat_label">Contacts</string>
    <string name="menu_patient_label">Patient</string>

    <!-- Bilancia utente -->
    <string name="utente_libra_button">Activate Libra</string>
    <string name="utente_save_weight_button">Read Weight</string>
    <string name="utente_disconnect_libra_button">Save and deactivate</string>
    <string name="utente_registra_peso_label">To read the weight from libra:</string>
    <string name="utente_disconnect_libra_label">To save weight and deactivte libra:</string>
    <string name="utente_last_measurement_label">Last measure:</string>
    <string name="utente_no_previous_measure">- KG</string>
    <string name="snackbar_no_measure">No previous measure</string>
    <string name="snackbar_follow_libra">Wait for tare calculation before weighing yourself</string>
    <string name="snackbar_read_first">You have to read the weight before disconnecting</string>
    <string name="snackbar_saved_weight">Weight saved</string>
    <string name="snackbar_error_weight">Error saving weight, try again</string>
    <string name="calibrationLink_text">Calibration needed?\nTap here for the instructions</string>


    <!-- Storico utente -->
    <string name="utente_graph_title">Weight trend</string>
    <string name="utente_goals_title">Goals</string>
    <string name="no_goals_title">There\'s no goals.</string>

    <!-- Profilo utente -->
    <string name="user_name">User Name</string>
    <string name="nutr_name">Nutritionist: </string>

    <string name="text_dateOfBirth">Date of birth: </string>
    <string name="user_dateOfBirth">%DD/MM/YYYY%</string>
    <string name="text_email">Email: </string>
    <string name="user_email">%Email%</string>

    <string name="text_goal">Next goal</string>
    <string name="last_goal">%Last goal written by nutritionist%</string>

    <string name="text_last_measure">Last measurement detected</string>

    <string name="text_measure">75 KG</string>
    <string name="text_data_detection">Date of detection: </string>
    <string name="date_last_detection">%DD/MM/YYYY%</string>
    <string name="text_time_detection">Hour of detection: </string>
    <string name="time_last_detection">%HH:MM%</string>
    <string name="text_next_detection">Next detection: </string>

    <!-- Dieta utente -->
    <string name="tv_today_data">Today data</string>
    <string name="utente_save_commento">Save</string>
    <string name="utente_messaggio_dieta_not_assegnata">Diet not yet assigned by nutritionist</string>
    <string name="addComment">Add a comment</string>
    <string name="add_comment_text">Comment of the day: </string>
    <string name="ok_text">YES</string>
    <string name="no_text">NO</string>
    <string name="title_confirm_text">Are you sure you want to delete it?</string>
    <string name="message_confirm_text">By selecting YES you will not be able to go back</string>
    <string name="edit_button_giornodieta">EDIT</string>
    <string name="delete_button_giornodieta">DELETE</string>
    <string name="insert_meal_description">Insert meal description..</string>
    <string name="set_start_date">Set diet start date</string>
    <string name="notes_of_the_day">Note of the day</string>
    <string name="calendar">Calendar</string>



    <!-- Chat utente -->
    <string name="mailTo" >To: </string>
    <string name="mailSubject" >Subject: </string>
    <string name="mailSubjectHint" >Enter the subject... </string>
    <string name="mailMessage" >Message: </string>
    <string name="mailMessageHint" >Enter the message... </string>
    <string name="submit_email">Submit</string>

    <!-- Tab Professionista -->
    <string name="tab_profile_label">Profile</string>
    <string name="tab_patients_label">Patients</string>

    <!-- Profilo nutrizionista -->
    <string name="nutr_user_name">Nutr_Name</string>
    <string name="text_nutr_id">User ID:</string>
    <string name="nutr_id">%D000001%</string>

    <string name="text_nutr_dateOfBirth">Date of birth:</string>
    <string name="nutr_dateOfBirth">%DD/MM/YYYY%</string>
    <string name="text_albo">Registration n°:</string>
    <string name="id_albo">%XX_NNNNNN%</string>
    <string name="text_nutr_email">Email:</string>
    <string name="nutr_email">%nutrizionista@email.it%</string>

    <string name="text_n_patients">Number of patients</string>

    <!-- Lista pazienti professionista -->
    <string name="nutr_button">Visit</string>
    <string name="nutr_patient_check">Last check:</string>
    <string name="order_alph">Order for name</string>
    <string name="order_check">Order for surname</string>
    <string name="search_patient">Search…</string>
    <string name="nutr_patient_ErrorMsg">Patient not found</string>

    <string name="day_button">Day</string>

    <!-- Profilo pazienti professionista -->
    <string name="nutr_patient_dateOfBirth">Date of birth:</string>
    <string name="nutr_patient_email">Email:</string>
    <string name="goal_button">Goal</string>
    <string name="nutr_patient_add_goal_Label">Next goal to achieve:</string>
    <string name="nutr_patient_add_goal_input_label">New goal</string>
    <string name="goal_submit_button">Add</string>
    <string name="goal_confirmation_request">Are you sure you want to add this goal?</string>
    <string name="goal_confirm_button">Yes</string>
    <string name="goal_deny_button">No</string>
    <string name="nutr_patient_goal_added_Label">The new goal was added successfully.</string>
    <string name="nutr_patient_goal_not_added_Label">The new goal could not be added. Try later.</string>
    <string name="goal_back_button">Go back to the patient profile</string>

    <!-- Pagina giorni dieta utente lato professionista -->
    <string name="tv_data_inizio_dieta_prefisso">Start on date: %1$s</string>

    <!-- Blocco bilancia pazienti professionista -->
    <string name="nutr_patient_libraLock_spinnerLabel">Register measurement:</string>
    <string-array name="nut_libra_lock_options">
        <item>Once a week</item>
        <item>Two times a week</item>
        <item>Three times a week</item>
    </string-array>

</resources>