<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/nutr_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cognome"
        android:textAllCaps="true"
        android:textColor="@color/colorSnackbar"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutr_user_name2" />

    <TextView
        android:id="@+id/nutr_user_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nome"
        android:textAllCaps="true"
        android:textColor="@color/colorSnackbar"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_nutr_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_nutr_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="50dp"
        android:text="@string/text_nutr_id"
        android:textAllCaps="true"
        android:textColor="@color/colorSnackbar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nutr_user_name2" />

    <TextView
        android:id="@+id/nutr_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/nutr_id"
        android:textAllCaps="true"
        android:textColor="@color/colorSnackbar"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_nutr_id" />

    <TextView
        android:id="@+id/text_nutr_dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_nutr_dateOfBirth"
        android:textColor="@color/colorSnackbar"
        app:layout_constraintStart_toStartOf="@+id/text_nutr_id"
        app:layout_constraintTop_toBottomOf="@+id/text_nutr_id" />

    <TextView
        android:id="@+id/nutr_dateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nutr_dateOfBirth"
        android:textColor="@color/colorSnackbar"
        app:layout_constraintEnd_toEndOf="@+id/nutr_id"
        app:layout_constraintTop_toTopOf="@+id/text_nutr_dateOfBirth" />

    <TextView
        android:id="@+id/nutr_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nutr_email"
        android:textColor="@color/colorSnackbar"
        app:layout_constraintEnd_toEndOf="@+id/nutr_id"
        app:layout_constraintTop_toTopOf="@+id/text_nutr_email" />

    <TextView
        android:id="@+id/text_nutr_email"
        android:layout_width="52dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_nutr_email"
        android:textColor="@color/colorSnackbar"
        app:layout_constraintStart_toStartOf="@+id/text_nutr_id"
        app:layout_constraintTop_toBottomOf="@+id/text_nutr_dateOfBirth" />

    <View
        android:id="@+id/divider12"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <View
        android:id="@+id/divider2_bold2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/divider12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_n_patients" />

    <TextView
        android:id="@+id/text_n_patients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/text_n_patients"
        android:textColor="@color/colorSnackbar"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/divider12"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nutCircle"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimaryLight"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3">

        <TextView
            android:id="@+id/text_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="42sp" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.55"
        app:layout_constraintTop_toBottomOf="@+id/text_nutr_id" />

</androidx.constraintlayout.widget.ConstraintLayout>