<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".landing.LandingPageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<Button
            android:id="@+id/utente_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Interfaccia Utente"
            app:backgroundTint="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/professionista_button"
            app:layout_constraintEnd_toEndOf="@+id/professionista_button"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="@+id/professionista_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/professionista_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Interfaccia professionista"
            app:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/preLoginLabel"
            app:layout_constraintEnd_toEndOf="@+id/preLoginLabel"
            app:layout_constraintStart_toStartOf="@+id/preLoginLabel"
            app:layout_constraintTop_toBottomOf="@+id/utente_button" />
        -->

        <TextView
            android:id="@+id/preLoginLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_huge"
            android:text="@string/loginLabel"
            app:layout_constraintBottom_toTopOf="@+id/preLoginButton"
            app:layout_constraintEnd_toEndOf="@+id/preLoginButton"
            app:layout_constraintStart_toStartOf="@+id/preLoginButton" />

        <Button
            android:id="@+id/preLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_huge"
            android:paddingTop="@dimen/padding_large"
            android:paddingRight="@dimen/padding_huge"
            android:paddingBottom="@dimen/padding_large"
            android:text="@string/loginButton"
            app:layout_constraintBottom_toTopOf="@+id/preRegistrationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/preRegistrationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_huge"
            android:text="@string/registrationLabel"
            app:layout_constraintBottom_toTopOf="@+id/preRegistrationButton"
            app:layout_constraintEnd_toEndOf="@+id/preRegistrationButton"
            app:layout_constraintStart_toStartOf="@+id/preRegistrationButton" />

        <Button
            android:id="@+id/preRegistrationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_huge"
            android:paddingTop="@dimen/padding_large"
            android:paddingRight="@dimen/padding_huge"
            android:paddingBottom="@dimen/padding_large"
            android:text="@string/registrationButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preLoginButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
